--- a/bash_script/.tmux.config
+++ b/bash_script/.tmux.config
@@ -1,6 +1,9 @@
 set -g mode-mouse on
 bind -n C-k send-keys -R \; clear-history
 
+# Start numbering at 1
+set -g base-index 1
+
 # Set status bar
 set -g   status-utf8 on
 set -g   status-interval 1
