--- a/bash_script/.tmux.conf
+++ b/bash_script/.tmux.conf
@@ -3,6 +3,7 @@ bind -n C-k send-keys -R \; clear-history
 
 # Start numbering at 1
 set -g base-index 1
+setw -g mode-keys vi
 
 # Set status bar
 set -g   status-interval 1
