mouse and monokai

--- a/bash_script/.tmux.conf
+++ b/bash_script/.tmux.conf
@@ -16,8 +16,17 @@ setw -g window-status-current-format '#[fg=yellow] #I:#W #[fg=default]'
 # default statusbar colors
 set -g   status-fg colour8
 set -g   status-bg black
-set -g   status-attr bright
 set -g   status-keys emacs
+
+# Toggle mouse on
+bind-key M \
+  set-option mouse on \;\
+  display-message 'Mouse: ON'
+
+# Toggle mouse off
+bind-key m \
+  set-option mouse off \;\
+  display-message 'Mouse: OFF'
 
 set -g @continuum-restore 'on'
 
